Update index.html with profile pic and client list

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <aside class="hero-right" data-aos="fade-left">
           <div class="photo card">
             <!-- Replace this with your image at /assets/profile.jpg -->
-            <img src="/assets/profile-placeholder.jpg" alt="Your Name — profile photo" id="profilePhoto">
+            <img src="/assets/profile.jpg" alt="Shefali Naik" id="profilePhoto">
           </div>
         </aside>
       </header>
@@ -252,14 +252,29 @@
 
         <div class="clients-grid" style="margin-top:12px">
           <!-- Copy / add .client-card elements. Replace image src with your client logos -->
-          <div class="client-card" data-client="Client A" onclick="openImage('/assets/clients/client1.png')">
-            <img src="/assets/clients/client1-placeholder.png" alt="Client 1 logo">
+          <div class="client-card" data-client="Client A" onclick="openImage('/assets/clients/us-courts-logo.png')">
+            <img src="/assets/clients/us-courts-logo.png" alt="us-courts-logo.png">
           </div>
-          <div class="client-card" data-client="Client B" onclick="openImage('/assets/clients/client2.png')">
-            <img src="/assets/clients/client2-placeholder.png" alt="Client 2 logo">
+          <div class="client-card" data-client="Client B" onclick="openImage('/assets/clients/fcc-logo.png')">
+            <img src="/assets/clients/fcc-logo.png" alt="fcc-logo.png">
           </div>
-          <div class="client-card" data-client="Client C" onclick="openImage('/assets/clients/client3.png')">
-            <img src="/assets/clients/client3-placeholder.png" alt="Client 3 logo">
+          <div class="client-card" data-client="Client C" onclick="openImage('/assets/clients/nara-logo.png')">
+            <img src="/assets/clients/nara-logo.png" alt="nara-logo.png">
+          </div>
+          <div class="client-card" data-client="Client D" onclick="openImage('/assets/clients/smithsonian-logo.png')">
+            <img src="/assets/clients/smithsonian-logo.png" alt="smithsonian logo">
+          </div>
+          <div class="client-card" data-client="Client D" onclick="openImage('/assets/clients/client4.png')">
+            <img src="/assets/clients/client4-placeholder.png" alt="Client 4 logo">
+          </div>
+          <div class="client-card" data-client="Client D" onclick="openImage('/assets/clients/client4.png')">
+            <img src="/assets/clients/client4-placeholder.png" alt="Client 4 logo">
+          </div>
+          <div class="client-card" data-client="Client D" onclick="openImage('/assets/clients/client4.png')">
+            <img src="/assets/clients/client4-placeholder.png" alt="Client 4 logo">
+          </div>
+          <div class="client-card" data-client="Client D" onclick="openImage('/assets/clients/client4.png')">
+            <img src="/assets/clients/client4-placeholder.png" alt="Client 4 logo">
           </div>
           <div class="client-card" data-client="Client D" onclick="openImage('/assets/clients/client4.png')">
             <img src="/assets/clients/client4-placeholder.png" alt="Client 4 logo">
